# hw5_mlops_smirnov_maksim

./: .gitignore  README.md  dvc.yaml  metrics.json  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
feature_store/: README.md  docker-compose.yml  requirements.txt
feature_store/feature_repo/feature_repo/: feature_store.yaml
reports/: face_blur_architecture.md  face_blur_diagram.py  marimo_vs_jupyter.md  production.md
src/: prepare.py  train.py
