[project]
name = "hw5"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.67.1",
    "joblib>=1.5.3",
    "mlflow>=3.11.1",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "feast[postgres]>=0.62.0",
    "ruff>=0.15.12",
]
